@@ -35,7 +35,7 @@ message Foo {
   optional     bool bool     = 13;
   optional   string string   = 14;
   optional    bytes bytes    = 15;
-  optional        A enum     = 16;
+  optional        A enum     = 16 [default = Z];
 
   // some repeated types
   repeated    int32 intArray = 17;
