@@ -13,6 +13,9 @@ Trunk (not yet released)
     AVRO-1446. C#: Correctly handle system errors in RPC.
     (David Taylor via cutting)
 
+    AVRO-1445. Java: Fix protobuf support to correctly handle enums
+    with default values.  (cutting)
+
 Avro 1.7.6 (15 January 2014)
 
   NEW FEATURES
